samples/_failures_safe/1761396921_1e537d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48fc1bdc.c: In function ‘print_token’:
./samples/SAFE/__tmp_48fc1bdc.c:177:19: error: missing terminating " character
  177 |         "NUMBER", "IDENTIFIER
      |                   ^~~~~~~~~~~
./samples/SAFE/__tmp_48fc1bdc.c:177:9: error: expected expression at end of input
  177 |         "NUMBER", "IDENTIFIER
      |         ^~~~~~~~
./samples/SAFE/__tmp_48fc1bdc.c:177:9: error: expected declaration or statement at end of input
